<resources>
    <string name="app_name">BackgroundApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="film">Film</string>
    <string name="animals">Animals</string>
    <string name="nature">Nature</string>
    <string name="travel">Travel</string>
    <string name="people">People</string>
    <string name="architecture">Architecture</string>
    <string name="food_drink">Food and Drink</string>
    <string name="textures_patterns">Textures Patterns</string>
    <string name="photography">Photography</string>
    <string name="sports">Sports</string>
    <string name="d">3D</string>
    <string name="experimental">Experimental</string>
    <string name="downloading_image">Downloading Image</string>
    <string name="set_wallpaper">Set as wallpaper</string>
    <string name="error_wallpaper">An error occurred while setting the wallpaper</string>
    <string name="all_fields">Please fill in all fields.</string>
    <string name="categories">Categories</string>
    <string name="categories_text">Select 3 categories to personalize your experience</string>
    <string name="continue_button">Continue</string>
    <string name="intro_text">Discover stunning wallpapers to personalize your screen!</string>
    <string name="intro_btn_text">Get in</string>
    <string name="log_in">Log in</string>
    <string name="email_text">Email</string>
    <string name="password">Password</string>
    <string name="login_btn">Log In</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="search">Search...</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="name_text">Name</string>
    <string name="surname_text">Surname</string>
    <string name="username_text">Username</string>
    <string name="email">Email</string>
    <string name="logout">Log out</string>
    <string name="password_text">Password</string>
    <string name="categories3">You can choose up to 3 categories</string>
    <!-- Strings used for fragments for navigation -->


    <string name="onboarding1_text">Welcome</string>
    <string name="onboarding1_pix">Pix</string>
    <string name="onboarding1_wall">Wall</string>
    <string name="onboarding_text2">Discover our vast collection of your favorite themes and add style to your device</string>
    <string name="onboarding2_text1">Download</string>
    <string name="onboarding2_text_and">and</string>
    <string name="onboarding2_text2">Set Up Easily</string>
    <string name="onboarding2_text3">Download your chosen wallpaper with a single tap and set it as your background instantly. Enjoy your fresh new look</string>
    <string name="onboarding3_text1">Add</string>
    <string name="onboarding3_text2">Personal </string>

    <string name="error_empty_fields">Please fill in all fields.</string>
    <string name="error_invalid_email">Invalid email format.</string>
    <string name="error_saving_user_info">Error saving user information: %1$s</string>
    <string name="error_registration_failed">Registration Failed: %1$s</string>
    <string name="error_login_failed">Login Failed.</string>
    <string name="error_data_not_found">User data not found</string>
    <string name="error_fetch_user_data">Failed to fetch user data</string>
    <string name="error_user_not_logged">User not logged in</string>
</resources>