<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_color"
    tools:context=".view.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen120"
            android:text="@string/log_in"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen50sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="32dp" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen50"
            android:layout_marginStart="@dimen/dimen30"
            android:layout_marginTop="@dimen/dimen80"
            android:layout_marginEnd="@dimen/dimen30"
            android:background="@drawable/intro_btn_background"
            android:ems="10"
            android:hint="@string/email_text"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen50"
            android:layout_marginStart="@dimen/dimen30"
            android:layout_marginTop="@dimen/dimen30"
            android:layout_marginEnd="@dimen/dimen30"
            android:background="@drawable/intro_btn_background"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen30"
            android:layout_marginEnd="@dimen/dimen30"
            android:layout_marginBottom="@dimen/dimen60"
            android:background="@drawable/login_btn_background"
            android:text="@string/login_btn"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen18sp"
            app:layout_constraintBottom_toTopOf="@+id/buttonSignup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton

            android:id="@+id/buttonSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen30"
            android:layout_marginEnd="@dimen/dimen30"
            android:layout_marginBottom="@dimen/dimen60"
            android:background="@drawable/login_btn_background"
            android:text="@string/sign_up_btn"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>