<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_color"
    tools:context=".view.SignupFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/home_gradient_background">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen10"
            android:layout_marginTop="@dimen/dimen80"
            android:text="@string/sign_up_text"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen50sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen60"
            app:layout_constraintTop_toBottomOf="@+id/textView4">

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="0dp"
                android:layout_height="@dimen/dimen60"
                android:layout_marginStart="@dimen/dimen15"
                android:layout_marginEnd="@dimen/dimen5"
                android:background="@drawable/intro_btn_background"
                android:ems="10"
                android:hint="@string/name_text"
                android:inputType="text"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toStartOf="@+id/editTextLastName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextLastName"
                android:layout_width="0dp"
                android:layout_height="@dimen/dimen60"
                android:layout_marginStart="@dimen/dimen15"
                android:layout_marginEnd="@dimen/dimen5"
                android:background="@drawable/intro_btn_background"
                android:ems="10"
                android:hint="@string/surname_text"
                android:inputType="text"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/editTextName"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/editTextUserName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen60"
            android:layout_marginStart="@dimen/dimen15"
            android:layout_marginTop="@dimen/dimen40"
            android:layout_marginEnd="@dimen/dimen15"
            android:background="@drawable/intro_btn_background"
            android:ems="10"
            android:hint="@string/username_text"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout5" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen60"
            android:layout_marginStart="@dimen/dimen15"
            android:layout_marginTop="@dimen/dimen40"
            android:layout_marginEnd="@dimen/dimen15"
            android:background="@drawable/intro_btn_background"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextUserName" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen60"
            android:layout_marginStart="@dimen/dimen15"
            android:layout_marginTop="@dimen/dimen40"
            android:layout_marginEnd="@dimen/dimen15"
            android:background="@drawable/intro_btn_background"
            android:ems="10"
            android:hint="@string/password_text"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen60"
            android:background="@drawable/gradient_edittext_background"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen32"
                android:layout_marginTop="@dimen/dimen8"
                android:layout_marginEnd="@dimen/dimen32"
                android:layout_marginBottom="@dimen/dimen8"
                android:background="@drawable/login_btn_background"
                android:text="@string/sign_up_btn"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>